--- a/scss/_panel.scss
+++ b/scss/_panel.scss
@@ -14,7 +14,7 @@
 
     &:not(.command-bar) {
       text-align: left;
-      @extend %h3, .m-0;
+      @extend %h3;
       padding: 0.4rem 0.6rem;
 
       &:before {
@@ -38,7 +38,7 @@
     }
 
     &.command-bar {
-      @extend .m-0;
+      margin: 0;
       margin-bottom: 1rem;
 
       &:before {
@@ -99,7 +99,8 @@
     }
 
     &.command-bar {
-      @extend %h4, .m-0;
+      @extend %h4;
+      margin: 0;
       margin-top: 1rem;
       line-height: 2rem;
       height: 2rem;
